--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  timeout: 5000
+    adapter: mysql
+    database: bryanall_apps1
+    username: bryanall_tim
+    password: v4y*.ve8e1:/
